@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6280 2004/06/22 21:41:37 adrianp Exp $
+$NetBSD: CHANGES,v 1.6281 2004/06/22 23:53:52 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3025,3 +3025,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added pkgfind-20040622 [xtraeme 2004-06-22]
 	Added drivel-1.0.0 [jmmv 2004-06-22]
 	Added SpeedyCGI-2.2 [adrianp 2004-06-22]
+	Updated qpopper to 4.0.5nb4 [xtraeme 2004-06-22]
